[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/UI/game_over.gd" type="Script" id=1]
[ext_resource path="res://scripts/UI/title_animation_changer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/cartwheel_80.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/fonts/cartwheel_40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight31.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight19.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource/name = "open"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("menu_screen:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.92817, -2.92817 ), "update":0, "values":[ Vector2( 60, -520 ), Vector2( 60, 10 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "start"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("menu_screen:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 60, -520 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("menu_screen:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }

[sub_resource type="Animation" id=3]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title/Label:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.1, 1.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("title:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 452, 196 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("title:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[sub_resource type="Animation" id=4]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 1.1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 10.0, -10.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("title/Label:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("title:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 452, 196 ) ] }

[sub_resource type="Animation" id=5]

resource/name = "title_random_3"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 452, 196 ), Vector2( 452, 156 ), Vector2( 452, 236 ), Vector2( 452, 196 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("title:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("title:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 0.0 ] }

[node name="game_over_screen" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/open = SubResource( 1 )
anims/start = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[node name="menu_screen" type="Polygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 60, 10 )
polygon = Vector2Array( 68, 90, 836, 90, 836, 490, 68, 490 )
uv = Vector2Array(  )
color = Color( 0.376648, 0.558798, 0.945313, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 2 )
__meta__ = { "_edit_group_":true }

[node name="animation" type="AnimationPlayer" parent="menu_screen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/title_random_1 = SubResource( 3 )
anims/title_random_2 = SubResource( 4 )
anims/title_random_3 = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="title" type="Node2D" parent="menu_screen"]

transform/pos = Vector2( 452, 196 )

[node name="Label" type="Label" parent="menu_screen/title"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 416.0
margin/top = 82.0
margin/right = -353.0
margin/bottom = -17.0
custom_fonts/font = ExtResource( 3 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timer" type="Timer" parent="menu_screen/title"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="buttons" type="Container" parent="menu_screen"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 240.0
margin/right = 36.0
margin/bottom = 50.0

[node name="menu_button" type="Button" parent="menu_screen/buttons"]

focus_neighbour/right = NodePath("../restart_button")
focus_neighbour/bottom = NodePath("../restart_button")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 76.0
margin/right = 200.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.480469, 0.480469, 0.480469, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
icon = ExtResource( 5 )
flat = false

[node name="restart_button" type="Button" parent="menu_screen/buttons"]

focus_neighbour/left = NodePath("../menu_button")
focus_neighbour/top = NodePath("../menu_button")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 434.0
margin/top = 75.0
margin/right = 633.0
margin/bottom = 129.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.480469, 0.480469, 0.480469, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
icon = ExtResource( 6 )
flat = false

[connection signal="finished" from="menu_screen/animation" to="menu_screen" method="_on_animation_finished"]

[connection signal="timeout" from="menu_screen/title/timer" to="menu_screen" method="_on_timer_timeout"]

[connection signal="pressed" from="menu_screen/buttons/menu_button" to="." method="_on_menu_button_pressed"]

[connection signal="pressed" from="menu_screen/buttons/restart_button" to="." method="_on_restart_button_pressed"]


